
- Fixed initial position of options dialog box divider.

- If the default edit mode had a tab size of 8, and the global default
  was 4, a buffer-local property specifying a tab size of 8  would be
  ignored.

- "Spaces To Tabs" didn't work with non-leading tabs.

- C+e v ENTER and C+e v TAB still did auto indent, instead of inserting
  a literal ENTER and TAB like the documentation says.

}}}
{{{ API Changes

- Removed some methods which do not make any sense at all with the new
  display engine:

  JEditTextArea.virtualToPhysical()
  JEditTextArea.physicalToVirtual()
  JEditTextArea.getVirtualLineCount()
  JEditTextArea.xToOffset() (was already deprecated)
  JEditTextArea.offsetToX() (was already deprecated)

- The FoldVisibilityManager class has been replaced with a
  DisplayManager class; obtain an instance by calling
  JEditTextArea.getDisplayManager().

- The concept of "virtual line numbers" is gone.
  JEditTextArea.get/setFirstLine() now takes a vertical scroll bar
  position that takes hidden lines as well as lines split by soft wrap
  into account. Currently, no public API exists to covert between
  scroll line numbers and physical line numbers, however there is a new
  JEditTextArea.setFirstPhysicalLine() method.

- Constructor of EBMessage class now takes an Object, not an
  EBComponent, and getSource() now returns an Object, not an
  EBComponent. This could break any plugins that provide custom message
  types.

- The following plugins are known to be broken:

  Background
  Console
  JDiff
  WhiteSpace
  SideKick
  XML

}}}
{{{ API Enhancements

- Added VFS.DirectoryEntryCompare class.

- Added View.goToBuffer() method. If the specified buffer is already
  visible in one of the view's edit panes, sends focus to that edit
  pane. Otherwise, calls setBuffer() on the current edit pane.

- Added JEditTextArea.addToLeftOfScrollBar() method.

}}}

}}}

jEdit buffer local properties:
:wrap=hard:maxLineLen=72:indentSize=2:
:folding=explicit:collapseFolds=2: