@@ -3,7 +3,11 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
-- clean up path handling
+- vfs browser: re-add option to base filter on filename extension
+- enter with browser view focused; hides dialog
+- browser field completion: fills out full path
+- don't show 'new directory' in favorites:
+
 - wm drag: sometimes cursor gets stuck, need to check for resizePos out
 of bounds, etc.
 - log viewer scrolling
@@ -13,7 +17,6 @@ of bounds, etc.
 - propertiesChanged() closes dockables
 - left-bias rects broken with up/down
 - loaded flag cleared before loading finished
-- vfs browser: re-add option to base filter on filename extension
 - today:
   - finish rect select content inserted/content removed
   - rect select and trailing whitespace
@@ -40,20 +43,15 @@ of bounds, etc.
 - help:
   - titles in search are fucked
   - FAQ: better titles
-- quicknotepad needs requestDefaultFocus() -- NO -- JUST GET RID OF THE
-  DEPRECATED API
 - new plugin mgr:
   - human readable strings in source.... entry.status
   - ask before selecting dependencies & 'don't show again'
   - mirror change: refresh download locations
   - explicit 'refresh mirror list' button in option pane
 - update horizontal scroll width immediately on buffer switch
-- enter with browser view focused; hides dialog
 - need distinct default styles for new token types
 - HTML mode: use new token types
 - hypersearch: open in new split
-- C+e C+c long block of text
-  - soft wrap display provides fix: need nextLineRequested event
 - new bsh and bsh command path
 - C+ENTER 3 menu command - bar not hidden - need input handler action
   listeners or something
@@ -61,7 +59,6 @@ of bounds, etc.
 - tab in action bar
 - beanshell: invokeAction() function
 - perl: q{}, etc.
-- don't show 'new directory' in favorites:
 - plugin error dialog -- if > 1 error per plugin
 - A+# on OS X, need better modifier mapping on OS X
 - how to handle S+0-9?
@@ -143,7 +140,6 @@ of bounds, etc.
 - maximisation state bug: open window, resize to size X. close window,
   open window again, resize to size Y. maximise. close window, open
   window again, it has size X not size Y.
-- fs browser: scroll to visible after setting divider location
 - expand fold: try to expand even if already expanded
 - openFile(): can open two copies of the same buffer if a) remote b)
   canonPath != path
@@ -175,13 +171,11 @@ of bounds, etc.
   keeping INVALID? report errors in some other manner?
 - clean up the way macro hierarchy is stored
 - dialog parenting for fsb colors pane, vfs browser dialog
-- requestDefaultFocus() is bad
 
 + features:
 
+- remember floating & cloned dockables in perspective
 - caret saving needs to be more flexible w.r.t. split panes
-- close current area w/ dockables that don't implement
-  requestDefaultFocus()
 - add dockable window state change msg
 - range-comment & rect select
 - options for recent files list, recent files menu
