@@ -347,6 +347,10 @@ release.
 
 - Added JEditTextArea.addToLeftOfScrollBar() method.
 
+- Instead of overriding the deprecated requestDefaultFocus() method,
+  dockable windows can now implement DefaultFocusComponent and its
+  focusOnDefaultComponent() method.
+
 }}}
 
 }}}
